# droidamp

./: .gitignore  AGENTS.md  Codex_IMPLEMENTATION_PLAN.md  Final_IMPLEMENTATION_PLAN.md  Opus_IMPLEMENTATION_PLAN.md  README.md  geminiplan.md
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/droidamp/: DroidAmpApplication.kt  MainActivity.kt
android/app/src/main/java/com/droidamp/data/: SearchHistoryManager.kt
android/app/src/main/java/com/droidamp/data/api/: ApiClient.kt  DroidAmpApi.kt
android/app/src/main/java/com/droidamp/data/models/: Track.kt
android/app/src/main/java/com/droidamp/data/repository/: TrackRepository.kt
android/app/src/main/java/com/droidamp/player/: AudioService.kt  PlayerManager.kt  SkipHandler.kt
android/app/src/main/java/com/droidamp/ui/components/: PlayerControls.kt  ProgressBar.kt
android/app/src/main/java/com/droidamp/viewmodel/: PlayerViewModel.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_notification.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
backend/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
backend/models/: __init__.py  schemas.py
backend/routers/: __init__.py  health.py  search.py
backend/services/: __init__.py  cache.py  youtube.py
backend/tests/: test_search.py
(+4 files in other folders)
